# OpenRAG

./: .dockerignore  .env.example  Dockerfile  Dockerfile.ui  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: compose_smoke.py
src/openrag/: __init__.py  config.py  models.py
src/openrag/api/: __init__.py  app.py  schemas.py
src/openrag/embeddings/: __init__.py  service.py  store.py
src/openrag/eval/: __init__.py  __main__.py  cli.py
src/openrag/ingestion/: __init__.py  service.py
src/openrag/metrics/: __init__.py  observability.py
src/openrag/retrieval/: __init__.py  service.py
src/openrag/services/: __init__.py  generation.py  query.py
src/openrag/ui/: __init__.py  app.py
src/openrag/utils/: __init__.py
tests/: conftest.py  test_api_app.py  test_api_e2e.py  test_config.py  test_dataset_reset.py  test_embeddings.py  test_ingestion.py  test_stats.py  test_store.py
