[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrag"
version = "0.1.0"
description = "Modular RAG pipeline with FastAPI backend and Gradio UI."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "OpenRAG Team" }]
dependencies = [
  "accelerate==0.30.1",
  "chromadb==0.5.5",
  "fastapi==0.111.0",
  "gradio==4.44.0",
  "httpx==0.27.0",
  "langchain==0.3.11",
  "langchain-community==0.3.11",
  "langchain-core==0.3.24",
  "langchain-text-splitters==0.3.0",
  "prometheus-client==0.20.0",
  "pydantic==2.7.4",
  "pydantic-settings==2.4.0",
  "pypdf==6.1.2",
  "python-dotenv==1.0.1",
  "structlog==24.1.0",
  "tenacity==8.3.0",
  "transformers @ git+https://github.com/huggingface/transformers.git@8fc54209130d48d3df9a4b1f59fcdaed3a8e0f34",
  "uvicorn[standard]==0.30.3",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "mypy==1.10.1",
  "pytest==8.3.2",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "pytest-mock==3.14.0",
  "ruff==0.5.5",
  "types-requests==2.32.0.20240622",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["openrag*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: marks tests that hit the full pipeline",
  "smoke: lightweight smoke checks",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
plugins = []

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", "build"]

[tool.uv]
package = true
